force-app/main/default/objects/Case/fields/Is_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Case__c</fullName>
    <formula>ISBLANK(ParentId)</formula>
    <label>Is Parent Case</label>
    <type>Checkbox</type>
</CustomField>