force-app/main/default/objects/Case/fields/Is_Simply_Tasks_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Simply_Tasks_Case__c</fullName>
    <formula>NOT(ISBLANK(Task_Template__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Simply Tasks Case</label>
    <type>Checkbox</type>
</CustomField>