force-app/main/default/objects/Case/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>The depth of this case to the master case.  Used to calculate the number of tasks and tasks completed.</description>
    <label>Level</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>