force-app/main/default/objects/Case/fields/Master_Case__c.field-meta.xml
<CustomField>
    <fullName>Master_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The top level parent case lookup record</description>
    <label>Master Case</label>
    <referenceTo>Master_Case__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>