force-app/main/default/objects/Case/fields/Number_of_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks_Completed__c</fullName>
    <label>Number of Tasks Completed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>