force-app/main/default/objects/Case/fields/Number_of_Tasks_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks_To_Complete__c</fullName>
    <label>Number of Tasks To Complete</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>