force-app/main/default/objects/Case/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF(
TRUE,

IF (
(Number_of_Tasks_To_Complete__c==0 || Number_of_Tasks_Completed__c == 0),
IMAGE(&quot;/resource/white_progress_100&quot;, &quot;white&quot;, 15, 100) &amp; &apos; 0%&apos;,

IF (
(Number_of_Tasks_To_Complete__c == Number_of_Tasks_Completed__c),
IMAGE(&quot;/resource/blue_progress_100&quot;, &quot;green&quot;, 15, 100) &amp; &apos; 100%&apos;,

IMAGE(&quot;/resource/blue_progress&quot;, &quot;green&quot;, 15,
IF (
Number_of_Tasks_To_Complete__c==0,
0,

(
(Number_of_Tasks_Completed__c)/Number_of_Tasks_To_Complete__c
)*100
)
) &amp;
IMAGE(&quot;/resource/white_progress&quot;, &quot;white&quot;, 15, 100 -
(IF(Number_of_Tasks_To_Complete__c==0,
0,( (Number_of_Tasks_Completed__c)/Number_of_Tasks_To_Complete__c)*100) )) &amp; &apos; &apos; &amp;
TEXT(ROUND(IF(Number_of_Tasks_To_Complete__c==0,0,( (Number_of_Tasks_Completed__c)/Number_of_Tasks_To_Complete__c)*100),0)) &amp; &apos;%&apos;)
),

IF(Number_of_Tasks_To_Complete__c==0 || (Number_of_Tasks_Completed__c) == 0,IMAGE(&quot;/resource/white_progress_100&quot;, &quot;white&quot;, 15, 100) &amp; &apos; 0%&apos;,
IF(Number_of_Tasks_To_Complete__c == (Number_of_Tasks_Completed__c),IMAGE(&quot;/resource/blue_progress_100&quot;, &quot;green&quot;, 15, 100) &amp; &apos; 100%&apos;,
IMAGE(&quot;/resource/blue_progress&quot;, &quot;green&quot;, 15, IF(Number_of_Tasks_To_Complete__c==0,0,( (Number_of_Tasks_Completed__c)/Number_of_Tasks_To_Complete__c)*100)) &amp; IMAGE(&quot;/resource/white_progress&quot;, &quot;white&quot;, 15, 100 - (IF(Number_of_Tasks_To_Complete__c==0,0,( (Number_of_Tasks_Completed__c)/Number_of_Tasks_To_Complete__c)*100) ))&amp; &apos; &apos; &amp; TEXT(ROUND(IF(Number_of_Tasks_To_Complete__c==0,0,( (Number_of_Tasks_Completed__c)/Number_of_Tasks_To_Complete__c)*100),0)) &amp; &apos;%&apos;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>