force-app/main/default/objects/Case/fields/Top_Level_Case__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Level Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>