force-app/main/default/objects/Case/fields/Top_Level_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Case_Id__c</fullName>
    <inlineHelpText>A text version of the Id for the case at the top of the heirarchy.</inlineHelpText>
    <label>Top Level Case Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>