force-app/main/default/objects/Case/recordTypes/Simply_Tasks_Case.recordType-meta.xml
<RecordType>
    <fullName>Simply_Tasks_Case</fullName>
    <active>true</active>
    <businessProcess>Simply Tasks</businessProcess>
    <description>Defines the setup for cases related to Simply Tasks</description>
    <label>Simply Tasks Case</label>
</RecordType>