force-app/main/default/objects/Case/listViews/Simply_Task_Cases.listView-meta.xml
<ListView>
    <fullName>Simply_Task_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Level__c</columns>
    <columns>Is_Parent_Case__c</columns>
    <columns>Task_Template__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Simply_Tasks_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Parent_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Simply Task Cases</label>
</ListView>